# CalculatorLibrary

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  requirements.txt  update_changelog.sh
.circleci/: config.yml
.github/workflows/: main.yml
calculatorlibrary/: arithmetics.py
tests/: test_calculatorlibrary.py
