[tool.poetry]
name = "CalculatorLibrary"
version = "0.1.0"
description = ""
authors = ["plesz <r.plesz@yahoo.de>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
pre-commit = "^2.19.0"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
